2003-12-10  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* src/pixregionint.h, src/pixregion.c, src/pixman.h, src/icutil.c, src/ictri.c, src/ictrap.c, src/ictransform.c, src/icstipple.c, src/icrop.h, src/icrect.c, src/icpixels.c, src/icint.h, src/icimage.h, src/icimage.c, src/icformat.c, src/iccompose.c, src/iccolor.c, src/icbltone.c, src/icblt.c, src/ic.c:
	Rename exported Ic* and PixRegion* functions, types, enums
	to be prefixed pixman (or PIXMAN for enum values)

	* libpixman.pc.in, README: libpixman is the pixel manipulation library

	* src/pixregionint.h, src/icint.h:
	Change ic.h/pixregion.h headers inclusions to be pixman.h

	* src/ic.h: Removed ic.h, merged into pixman.h

	* src/pixman.h:
	Merged pixregion.h (former name and CVS history of this file)
	and ic.h (now CVS deleted here).

	* src/Makefile.am:
	Updated for libpixregion,libic to libpixman source merges.
	Added -I$(srcdir) so we get internal headers from here even
	when srcdir != builddir.

	* libpixman.pc.in, configure.in, Makefile.am:
	Updated for libpixregion,libic to libpixman package name, dependencies.

	* README, COPYING, AUTHORS:
	Merge of libic, slim AUTHORS, COPYING, README

	* Initial repository copy of libpixregion, libic, slim CVS.

	* Constructed a merged ChangeLog below via emacs VC mode (which rocks!)

2003-12-09  Carl Worth  <cworth@isi.edu>

	* ChangeLog.libpixregion, autogen.sh, ChangeLog.libic:
	        * autogen.sh: Allow names of all autofoo programs to be
	        overridden via environment variables.

2003-11-25  Carl Worth  <cworth@isi.edu>

	* ChangeLog.libic, src/icutil.c:
	        * configure.in: Bump version to 0.1.5 for new 64-bit fixes.

	        * src/icutil.c (icStipple8Bits): One more fix needed for 64-bit
	        machine (alpha in this case). Thanks to Jakub Bogusz
	        <qboosh@pld-linux.org>.

2003-11-17  Carl Worth  <cworth@isi.edu>

	* src/icrop.h, src/icutil.c, ChangeLog.libic:
	        * src/icutil.c (icStipple1Bits):